--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@
         </section>
         <!-- categories end -->
         <!-- shoes section start -->
-        <section class="container">
-            <h1>Shoes</h1>
+        <section class="container my-5">
+            <h1>Shoes
+            </h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                     <div class="card my-5 border border-0 shadow-lg h-100">
@@ -206,6 +207,77 @@
             </div>
         </section>
         <!-- shoes section end-->
+        <!-- bag section start -->
+        <section class="container">
+            <h1>Backpack
+
+            </h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card my-5 border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag
+                            </h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.
+                            </p>
+                            <h5>$120</h5>
+                            <div class="btn btn-danger">BUY NOW
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card my-5 border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class=" card-body">
+                            <h5 class="card-title">Blue Niltu Bag
+                            </h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                            </p>
+                            <h5>$120</h5>
+                            <div class="btn btn-danger">BUY NOW
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card my-5 border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag
+
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.
+                            </p>
+                            <h5>$120</h5>
+                            <div class="btn btn-danger">BUY NOW
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- bag section end--->
+        <!-- login section start -->
+        <section class="container">
+            <h1>LET'S STAY IN TOUCH
+            </h1>
+            <p>Get updates on sales, specials and more
+            </p>
+            <form>
+                <div class="mb-3">
+
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </section>
+        <!-- login section end -->
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
