--- a/index.html
+++ b/index.html
@@ -262,19 +262,20 @@
 
         <!-- bag section end--->
         <!-- login section start -->
-        <section class="container">
-            <h1>LET'S STAY IN TOUCH
-            </h1>
-            <p>Get updates on sales, specials and more
-            </p>
-            <form>
-                <div class="mb-3">
+        <section styel="height:300px;" class="container rounded-3 my-5 d-flex justify-content-center align-items-center bg-info">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more
+                </p>
+                <form>
+                    <div class="mb-3">
 
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
         </section>
         <!-- login section end -->
 
